added anchor tags to switch between pages

--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -13,6 +13,7 @@
   <nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand" href="/">Note Taker
     </a>
+    <a href="/notes">Notes</a>
   </nav>
   <div class="container">
     <div style="margin-top: 80px;" class="jumbotron text-center">
